WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53228
[Gtk] Resource size is incorrectly reported to WebCore
https://bugs.webkit.org/show_bug.cgi?id=53228
Summary
[Gtk] Resource size is incorrectly reported to WebCore
Sergio Villar Senin
Reported
2011-01-27 01:04:06 PST
[Gtk] Resource size is incorrectly reported to WebCore
Attachments
Patch
(4.94 KB, patch)
2011-01-27 01:10 PST
,
Sergio Villar Senin
mrobinson
: review-
Details
Formatted Diff
Diff
Patch
(5.49 KB, patch)
2011-02-28 11:12 PST
,
Sergio Villar Senin
mrobinson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2011-01-27 01:10:30 PST
Created
attachment 80303
[details]
Patch
Sergio Villar Senin
Comment 2
2011-01-27 01:13:55 PST
It's easy to see the problem in web inspector. Just open the resources tab when visiting
http://www.csszengarden.com
for example and check the actual and xfer sizes of some resources when using epiphany and chrome.
Martin Robinson
Comment 3
2011-01-27 07:44:34 PST
Comment on
attachment 80303
[details]
Patch This seems like a really good change, but we must be failing a test because of this. If not we should add a test somewhere.
Sergio Villar Senin
Comment 4
2011-01-27 09:43:33 PST
most likely another version of
bug #40049
Sergio Villar Senin
Comment 5
2011-02-28 10:23:38 PST
Looks like the new test http/tests/inspector/network/network-size.html is the test we were looking for. It fails with current trunk and works with my patch.
Sergio Villar Senin
Comment 6
2011-02-28 11:12:24 PST
Created
attachment 84085
[details]
Patch New rebased version. Updated the skipped list
Sergio Villar Senin
Comment 7
2011-02-28 11:15:40 PST
***
Bug 55363
has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 8
2011-02-28 11:24:56 PST
Comment on
attachment 84085
[details]
Patch Great work.
Sergio Villar Senin
Comment 9
2011-02-28 11:44:36 PST
Committed
r79889
: <
http://trac.webkit.org/changeset/79889
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug