Source/WebCore/platform/network/ResourceHandleInternal.h
@@ -114,7 +114,6 @@ namespace WebCore {
 #if USE(SOUP)
             , m_cancelled(false)
             , m_buffer(0)
-            , m_total(0)
             , m_bodySize(0)
             , m_bodyDataSent(0)
             , m_idleHandler(0)
@@ -194,7 +193,6 @@ namespace WebCore {
         GRefPtr<GInputStream> m_inputStream;
         GRefPtr<GCancellable> m_cancellable;
         char* m_buffer;
-        gsize m_total;
         unsigned long m_bodySize;
         unsigned long m_bodyDataSent;
         guint m_idleHandler;
