Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp
@@ -362,7 +362,7 @@ static void gotChunkCallback(SoupMessage* msg, SoupBuffer* chunk, gpointer data)
 
     ASSERT(!d->m_response.isNull());
 
-    client->didReceiveData(handle.get(), chunk->data, chunk->length, false);
+    client->didReceiveData(handle.get(), chunk->data, chunk->length, chunk->length);
 }
 
 static SoupSession* createSoupSession()
@@ -453,7 +453,7 @@ static void sendRequestCallback(GObject* source, GAsyncResult* res, gpointer use
             // response_body->data as libsoup always creates the
             // SoupBuffer for the body even if the length is 0
             if (!d->m_cancelled && soupMsg->response_body->length)
-                client->didReceiveData(handle.get(), soupMsg->response_body->data, soupMsg->response_body->length, true);
+                client->didReceiveData(handle.get(), soupMsg->response_body->data, soupMsg->response_body->length, soupMsg->response_body->length);
         }
 
         // didReceiveData above might have cancelled it
@@ -473,7 +473,6 @@ static void sendRequestCallback(GObject* source, GAsyncResult* res, gpointer use
 
     d->m_inputStream = adoptGRef(in);
     d->m_buffer = static_cast<char*>(g_slice_alloc0(READ_BUFFER_SIZE));
-    d->m_total = 0;
 
     // readCallback needs it
     g_object_set_data(G_OBJECT(d->m_inputStream.get()), "webkit-resource", handle.get());
@@ -787,13 +786,12 @@ static void readCallback(GObject* source, GAsyncResult* asyncResult, gpointer da
     // It's mandatory to have sent a response before sending data
     ASSERT(!d->m_response.isNull());
 
-    d->m_total += bytesRead;
     if (G_LIKELY(!convertToUTF16))
-        client->didReceiveData(handle.get(), d->m_buffer, bytesRead, d->m_total);
+        client->didReceiveData(handle.get(), d->m_buffer, bytesRead, bytesRead);
     else {
         // We have to convert it to UTF-16 due to limitations in KURL
         String data = String::fromUTF8(d->m_buffer, bytesRead);
-        client->didReceiveData(handle.get(), reinterpret_cast<const char*>(data.characters()), data.length() * sizeof(UChar), 0);
+        client->didReceiveData(handle.get(), reinterpret_cast<const char*>(data.characters()), data.length() * sizeof(UChar), bytesRead);
     }
 
     // didReceiveData may cancel the load, which may release the last reference.
